THRIFT-1433 TServerSocket fix for MSVC Patch: Peace C

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1212109 13f79535-47bb-0310-9956-ffa450edef68